fixing z-index

--- a/my-portfolio/src/App.scss
+++ b/my-portfolio/src/App.scss
@@ -22,7 +22,7 @@ body {
   font-size: 1.4em;
   color: #29335f;
   scroll-behavior: smooth;
-  z-index: 1;
+  z-index: 3;
   // background-color: #090a11;
 }
 span {
