--- a/my-portfolio/src/styles/_icon.scss
+++ b/my-portfolio/src/styles/_icon.scss
@@ -26,6 +26,7 @@
       left: 0;
       top: -10px;
       border-radius: 50%;
+      z-index: -3;
     }
     &::before {
       border-top: solid 10px rgb(255, 0, 0, 0.8);
