--- a/my-portfolio/src/styles/_slide.scss
+++ b/my-portfolio/src/styles/_slide.scss
@@ -46,7 +46,7 @@
       height: 200px;
       position: absolute;
       width: 35%;
-      z-index: 12;
+      z-index: 1;
       top: 0;
       left: 0;
       @media (max-width: 400px) {
@@ -64,7 +64,7 @@
       height: 200px;
       position: absolute;
       width: 35%;
-      z-index: 12;
+      z-index: 1;
       top: 0;
       right: 0;
       @media (max-width: 400px) {
